--- a/template.mustache
+++ b/template.mustache
@@ -78,5 +78,9 @@
     </ul>
   </div>
 </body>
-<footer>© 2022 Aviary Tech</footer>
+<footer><p>&copy; <span id="year"></span> Aviary Tech</p></footer>
+
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
 </html>
